<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:id="@+id/nav_home"
        android:title="@string/menu_drawer_home"
        android:icon="@drawable/ic_menu_home"/>

    <item android:id="@+id/nav_account"
        android:title="@string/menu_drawer_minha_conta"
        android:icon="@drawable/ic_menu_user"/>

    <item android:id="@+id/nav_categoria"
        android:title="@string/menu_drawer_categorias"
        android:icon="@drawable/ic_menu_category"/>

    <item android:id="@+id/nav_pedidos"
        android:title="@string/menu_drawer_minhas_compras"
        android:icon="@drawable/ic_menu_orders"/>

    <item android:id="@+id/nav_carrinho"
        android:title="@string/menu_drawer_meu_carrinho"
        android:icon="@drawable/ic_menu_cart"/>

    <item android:id="@+id/nav_settings"
        android:title="@string/menu_drawer_settings"
        android:icon="@drawable/ic_menu_settings" />

    <item android:id="@+id/nav_logout"
        android:title="@string/menu_drawer_sair"
        android:icon="@drawable/ic_menu_logout"/>

</menu>